feat(draggble): add dependency react-dnd & implement draggable, droppable componens

--- a/src/app/components/dashboard/dashboard.scss
+++ b/src/app/components/dashboard/dashboard.scss
@@ -1,5 +1,6 @@
 .dashboard {
-    background-color: green;
+    background-color: lightgreen;
     height: 100%;
     flex: 1;
+    margin: 2rem;
 }
