--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $base-font-color;
 }
 
 ul {
@@ -14,4 +17,8 @@ ul {
 
 .pointer {
   cursor: pointer;
+}
+
+.bold {
+  font-weight: bold;
 }
