--- a/src/app/components/dashboard/dashboard.scss
+++ b/src/app/components/dashboard/dashboard.scss
@@ -2,6 +2,7 @@
     background-color: lightgreen;
     height: 100%;
     flex: 1;
+    max-width: 700px;
     margin: 2rem;
     display: flex;
     flex-direction: column;
