--- a/src/app/components/group/group.scss
+++ b/src/app/components/group/group.scss
@@ -1,6 +1,7 @@
 .group-container {
-    width: 80%;
-    min-height: 400px;
-    margin: 30px;
-    background-color: white;
+  width: 80%;
+  min-height: 400px;
+  margin: 30px;
+  background-color: white;
+  z-index: 100;
 }
